TreeWalkProcessor was not correctly recursing into collections.